--- a/app/src/main/res/layout/messages_activity.xml
+++ b/app/src/main/res/layout/messages_activity.xml
@@ -34,7 +34,7 @@
         tools:context="us.sayederfanarefin.ui.ChatMessagesActivity"
         >
 
-        <com.flurgle.camerakit.CameraView xmlns:camerakit="http://schemas.android.com/apk/res-auto"
+        <com.wonderkiln.camerakit.CameraView xmlns:camerakit="http://schemas.android.com/apk/res-auto"
             android:id="@+id/camera"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
