--- a/app/src/main/res/layout/temp_messages_activity.xml
+++ b/app/src/main/res/layout/temp_messages_activity.xml
@@ -44,7 +44,7 @@
         tools:context="us.sayederfanarefin.ui.ChatMessagesActivity"
         tools:showIn="@layout/activity_main">
 
-        <com.flurgle.camerakit.CameraView xmlns:camerakit="http://schemas.android.com/apk/res-auto"
+        <com.wonderkiln.camerakit.CameraView xmlns:camerakit="http://schemas.android.com/apk/res-auto"
             android:id="@+id/camera"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
