--- a/app/src/main/res/layout/activity_chat_box2.xml
+++ b/app/src/main/res/layout/activity_chat_box2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="us.sayederfanarefin.us.sayederfanarefin.NewChatActivity">
+    tools:context="us.sayederfanarefin.NewChatActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
