--- a/app/src/main/res/layout/activity_music_settings.xml
+++ b/app/src/main/res/layout/activity_music_settings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="us.sayederfanarefin.us.sayederfanarefin.ui.Settings">
+    tools:context="us.sayederfanarefin.ui.Settings">
 
 
 </LinearLayout>
