--- a/app/src/main/res/layout/add_friends_activity.xml
+++ b/app/src/main/res/layout/add_friends_activity.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 
     android:fitsSystemWindows="true"
-    tools:context="us.sayederfanarefin.us.sayederfanarefin.ui.FriendsListActivity">
+    tools:context="us.sayederfanarefin.ui.FriendsListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
