--- a/app/src/main/res/layout/content_chat_group_box2.xml
+++ b/app/src/main/res/layout/content_chat_group_box2.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="us.sayederfanarefin.us.sayederfanarefin.NewChatActivity"
+    tools:context="us.sayederfanarefin.NewChatActivity"
     tools:showIn="@layout/activity_chat_box2"
     android:orientation="vertical">
 
