--- a/app/src/main/res/layout/friends_list_header.xml
+++ b/app/src/main/res/layout/friends_list_header.xml
@@ -32,7 +32,7 @@
 
 
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/self_row_profile_image"
+                    android:id="@+id/message_profile_image_without_button"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:layout_marginTop="12dp"
@@ -57,7 +57,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/self_row__profile_name"
+                            android:id="@+id/friend_list_without_button_item_name"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="3"
@@ -69,7 +69,7 @@
                     </LinearLayout>
 
                     <TextView
-                        android:id="@+id/self_row_last_message"
+                        android:id="@+id/friend_list_without_button_item_status"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
@@ -88,12 +88,12 @@
                     android:layout_marginTop="24dp"
                     android:layout_weight="2">
                     <TextView
-                        android:id="@+id/self_row_profile_id"
+                        android:id="@+id/friend_list_without_button_item_user_id"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="top|right"
                         android:gravity="center_horizontal"
-                        android:text="john007"
+                        android:text="friend_list_without_button_item_user_id"
                         android:layout_marginRight="8dp"
                         android:textSize="5pt"
                         android:textAlignment="textEnd"
