--- a/app/src/main/res/layout/friends_list_header.xml
+++ b/app/src/main/res/layout/friends_list_header.xml
@@ -16,99 +16,120 @@
             android:textSize="7pt" />
 
 
-        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/message_container_card_view"
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/row_recent_chat_container_card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="0dp"
+        android:foreground="?android:attr/selectableItemBackground">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="2dp"
-            android:foreground="?android:attr/selectableItemBackground">
+            android:background="@color/colorWhite"
+            android:orientation="horizontal">
+
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/message_profile_image_without_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:src="@mipmap/ic_david_bekham" />
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorWhite"
-                android:orientation="horizontal"
-                android:id="@+id/self_row">
-
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/message_profile_image_without_button"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginBottom="12dp"
-                    android:layout_marginLeft="24dp"
-                    android:layout_marginRight="24dp"
-                    app:civ_border_width="2dp"
-                    app:civ_border_color="@color/profilePictureBorder"
-                    android:src="@mipmap/user" />
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="3"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="0dp"
-                        android:layout_marginTop="12dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/friend_list_without_button_item_name"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="3"
-                            android:maxLines="1"
-                            android:text="User Name"
-                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>
-
-
-                    </LinearLayout>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginTop="8dp"
+                    android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/friend_list_without_button_item_status"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/friend_list_without_button_item_name"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="4dp"
-
-                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
+                        android:layout_weight="3"
                         android:maxLines="1"
-                        android:text="Feeling Happy"
-                        android:textColor="@color/smallTextColor" />
+                        android:text="John Smith"
+                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
 
 
                 </LinearLayout>
 
-                <RelativeLayout
-                    android:layout_width="0dp"
+                <TextView
+                    android:id="@+id/friend_list_without_button_item_status"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_weight="2">
+                    android:layout_marginTop="4dp"
+                    android:maxLines="1"
+                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
+                    android:text="Good Day!"
+                    android:textColor="@color/smallTextColor" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="3"
+                android:orientation="vertical">
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="top|right"
+                    android:gravity="right"
+                    >
                     <TextView
+
                         android:id="@+id/friend_list_without_button_item_user_id"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="top|right"
-                        android:gravity="center_horizontal"
-                        android:text="friend_list_without_button_item_user_id"
-                        android:layout_marginRight="8dp"
                         android:textSize="5pt"
-                        android:textAlignment="textEnd"
-                        android:textColor="@color/colorAccentPrimary"
+                        android:maxLines="1"
+                        android:text="12.40 p.m."
+                        android:textColor="@color/smallTextColor" />
 
-                        />
+                    <!--<TextView-->
 
-
-                </RelativeLayout>
+                    <!--android:id="@+id/seen"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:gravity="right"-->
+                    <!--android:maxLines="1"-->
+                    <!--android:text=""-->
+                    <!--android:textColor="@color/colorPrimary" />-->
+                </LinearLayout>
 
 
             </LinearLayout>
 
 
-        </android.support.v7.widget.CardView>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+
+            android:layout_marginLeft="96dp"
+            android:layout_marginRight="16dp"
+            android:background="@color/colorGray"/>
+
+    </android.support.v7.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
