--- a/app/src/main/res/layout/profile_content_group.xml
+++ b/app/src/main/res/layout/profile_content_group.xml
@@ -10,12 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
+        android:id="@+id/profile_activity_frind_scrollview"
         android:layout_alignParentTop="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:id="@+id/first_item_friend_profile">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="208dp"
