--- a/app/src/main/res/layout/dialog_lock_progress.xml
+++ b/app/src/main/res/layout/dialog_lock_progress.xml
@@ -26,7 +26,7 @@
             android:layout_marginStart="12dp"
             android:layout_gravity="center_vertical"
             android:text="@string/msg.pleaseWait"
-            android:textColor="@color/black" />
+            android:textColor="@color/textColorBlack" />
 
     </LinearLayout>
 
