--- a/app/src/main/res/layout/timeline_post_comment_layout.xml
+++ b/app/src/main/res/layout/timeline_post_comment_layout.xml
@@ -29,7 +29,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginRight="12dp"
-                android:src="@mipmap/ic_david_bekham"
+                android:src="@mipmap/user"
                 android:layout_alignParentLeft="true"/>
 
 
@@ -43,7 +43,8 @@
                 android:layout_toEndOf="@+id/post_comment_profile_image"
                 android:layout_toStartOf="@+id/post_comment_time"
                 android:textStyle="bold"
-                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />
+                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
+                android:textSize="7pt" />
 
             <TextView
                 android:id="@+id/post_comment_time"
@@ -53,19 +54,21 @@
                 android:layout_marginTop="8dp"
                 android:text="12:00"
                 android:layout_alignParentRight="true"
-                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />
+                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
+                android:textSize="5pt" />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_toEndOf="@+id/post_comment_profile_image"
+
                 android:layout_below="@+id/post_comment_user_name">
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
+
                     android:orientation="vertical">
 
                     <TextView
@@ -74,12 +77,13 @@
                         android:id="@+id/comment_text"
                         android:text="test text"
 
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
+                        android:layout_marginLeft="4dp"
+                        android:layout_marginRight="4dp"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginBottom="4dp"
 
                         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
+                        android:textSize="8pt"
                         />
 
 
